--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:name=".Keynote_1"
             android:label="@string/title_activity_keynote_1" >
         </activity>
+        <activity
+            android:name=".Facebook"
+            android:label="@string/title_activity_facebook" >
+        </activity>
     </application>
 
 </manifest>
