--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,26 @@
             android:name=".Facebook"
             android:label="@string/title_activity_facebook" >
         </activity>
+        <activity
+            android:name=".Keynote_2"
+            android:label="@string/title_activity_keynote_2" >
+        </activity>
+        <activity
+            android:name=".Keynote_3"
+            android:label="@string/title_activity_keynote_3" >
+        </activity>
+        <activity
+            android:name=".Keynote_4"
+            android:label="@string/title_activity_keynote_4" >
+        </activity>
+        <activity
+            android:name=".Keynote_5"
+            android:label="@string/title_activity_keynote_5" >
+        </activity>
+        <activity
+            android:name=".Keynote_6"
+            android:label="@string/title_activity_keynote_6" >
+        </activity>
     </application>
 
 </manifest>
