--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -97,6 +97,10 @@
             android:name=".Workshops_Panels_2"
             android:label="@string/title_activity_workshops__panels_2" >
         </activity>
+        <activity
+            android:name=".CareerFair"
+            android:label="@string/title_activity_career_fair" >
+        </activity>
     </application>
 
 </manifest>
